set(CSC_SRC
	action/ActionMngr.cpp
    context/impl/MapScope.cpp
    context/impl/ListScope.cpp
	context/Context.cpp
	context/Querier.cpp
	context/val.cpp
	core/CscReader.cpp
    core/CscWriter.cpp
    core/CscStrSeeker.cpp
    lex/CharMngr.cpp
    lex/Lexer.cpp
    lex/Locator.cpp
    lex/PureLexer.cpp
    lex/TokenHolder.cpp
    lex/TokenPool.cpp
    syntax/CmdDriver.cpp
	syntax/CmdExecutor.cpp
	syntax/Operand.cpp
    syntax/Keyseq.cpp
    syntax/opr.cpp
    utility/utility.cpp
    utility/PathHelper.cpp
)

include_directories(
    ../include
)

add_library(csc
    ${CSC_SRC}
)